...
  MANUAL: "manual",
  PROGRAM: "program",
};

export const programMoreSelectionData = [
  {
    titl: "Edit program", icon: "edit", iconColor: Colors.tertiary, key: 3
  },
  {
    titl: "Duplicate program", icon: "content-copy", iconColor: Colors.windowsBlue, key: 6
  },
  {
    titl: "Share program to Pumpables Library", subTitle: "Share your program to the community", icon: "share-square-o", iconType: "FontAwesome", iconColor: Colors.lightBlue, key: 5
...
