...
        )}

        <View style={[{ marginTop: keyboardActive }, Styles.viewDemarcation]} />
        <View style={{ marginTop: keyboardActive }} />
        <Label font14 center grey weightBold mb10>Duration</Label>
        {/* <SliderSpeed
          testID="program_edit_step_dur"
          onValueChange={this.setDuration}
          grey
          options={durationOptions}
          stepIndex={durationSliderIndex}
        /> */}

...
