...
    } else if (isEmpty(peripherals) && !connected) {
      pumpWarningMsg = "Cannot find SuperGenie";
    }

    return (
      <Container
        testID="genie-home-view"
        edges={["top"]}
        ref={(ref) => { this.contentView = ref; }}
      >
        <PumpStatusHeader />
        <View style={styles.contentContain}>
          {(seeFilterResult || seeAllMyPrograms || seeAllLibrary) ? (
...
