...
          <View style={styles.noteView}>
            <Label font12 weightBold>
              NOTES
            </Label>

            <MultilineInput
              testID="notes-input"
              onChangeText={(value) => onChange("notes", value)}
              returnKeyType="next"
              value={notes}
              style={styles.note}
              placeholder="Add your notes"
              error={notes?.length > 500 ? "Maximum notes 500 characters" : ""}
...
                Cancel
              </Label>
            </ButtonRound>
            <ButtonRound
              blue
              disabled={stashEnabled && (!stashVolume || stashVolume === "0")}
              testID="save-session"
              onPress={this.onConfirmSave}
              style={styles.cancelBtn}
            >
              <Label white weightBold>
                Save
              </Label>
...
