...
                >
                  {logType}
                </Label>
                <View style={styles.topRightCont}>
                  {sessionType !== "feed" && (
                    <Label
                      testID="session_volume"
                      weightSemiBold
                      maxFontSizeMultiplier={1}
                      font14
                      style={[{
                        color: (logType === "Pumped" || logType === "Added") ? Colors.blue : Colors.lightBlue
                      },
...
    const totalLogs = data.length;

    return (
      <Container
        noScroll
        edges={["top"]}
        testID="logs-view-test"
      >
        {/* Can't use because of virtualized list error <Content></Content> */}
        <View style={{ flex: 1 }}>
          <TodayHeader
            iconPress={(action) => {
              if (activeTab === LOGS_TAB) {
...
