...
    } = this.props;

    return (
      <View style={Styles.column}>
        {!hideVolume && (
          <FocusableLabel
            testID="volume-input"
            ref={this.setInputVolumeRef}
            onChangeText={this.onChangeVolume}
            onSubmitEditing={this.onSubmitEditingVolume}
            onFocus={this.onFocusVolume}
            focus={focus === focusRef}
            underline={underline}
...
