...
              <Text white font18>Start Now</Text>
            </ButtonRound>
            <ButtonRound
              transparent
              style={styles.haveAccountButton}
              onPress={() => navigation.push("Auth", { routeName: "SignIn" })}
              testID="tour-already-have-account-test"
            >
              <Text
                lightGrey2
                font16
              >
                I already have an account
...
