...
  //     </View>
  //   );
  // }

  render() {
    return (
      <Container noScroll testID="dashboard-view-test">
        <TabNewsDashboard {...this.props} />
      </Container>

    /** News list * */
    // <View testID="TabNewsScreen" style={S.internalNavigatorContainer}>
    //   <FlatList
...
